Removed the portrait and fixed a bug where the intro section was too low.

--- a/Frontend/react-frontend/src/Components/Common.css
+++ b/Frontend/react-frontend/src/Components/Common.css
@@ -24,9 +24,6 @@
 .main-section{
     width: 55vw;
 
-    position: relative;
-    top: -3vh;
-
     padding: 2vw;
     padding-top: 5vh;
     padding-bottom: 5vh;
