--- a/Frontend/react-frontend/src/Components/IntroSection.css
+++ b/Frontend/react-frontend/src/Components/IntroSection.css
@@ -1,3 +1,7 @@
+.IntroSection:first-child{
+    margin-top: 10vh;
+}
+
 .portrait{
     border-radius: 50%;
     width: 180px;
