--- a/Frontend/react-frontend/src/Components/ProjectPage.css
+++ b/Frontend/react-frontend/src/Components/ProjectPage.css
@@ -1,7 +1,3 @@
-.container:first-child{
-    top: 5vh;
-}
-
 .project-page-section{
     width: 100%;
     height: 100%;
