--- a/Frontend/react-frontend/src/Components/SideBar.css
+++ b/Frontend/react-frontend/src/Components/SideBar.css
@@ -14,7 +14,7 @@ ul{
 }
 
 .nav-list {
-    top: 5vh;
+    top: 10vh;
 }
 
 .links-list{
